2007-12-19  Akim Demaille  <demaille@gostai.com>

	Generalize ast-fwd-gen.
	* src/ast/ast.yml (auxlib): New.
	* dev/ast-fwd-gen: Use it.

2007-12-18  Loic Fosse  <fosse@gostai.com>

	Fix class keyword implementation.
	* src/parser/ugrammar.y: Change initialization of variables declared
	with the class keyword from 0 to Object.clone.

2007-12-18  Loic Fosse  <fosse@gostai.com>

	* include/kernel/userver.hh (defcheck): Remove.
	Adjust all dependencies.

	merge -r 2066:2114 https://svn.gostai.com/svn/kernel1/trunk
	2007-12-18  Akim Demaille  <demaille@gostai.com>
	Fix defcheck.
	* include/kernel/userver.hh (defcheck): Fix its type.
	The F*g type system of C++ was not annoyed that I mixed bools
	and enums.  Hopefully "class enum" might make it into C++ some day.
	* src/ucommand.cc: Fix warning/error reports.

	2007-12-18  Guillaume Deslandes  <deslandes@gostai.com>
	Fix modifier handling, enhance syntax check.
	* src/ucommand.cc: Here.
	Test for mutltiple and missing modifiers.
	Don't increment value instantly (so sync get ant set return
	the previous value).

	2007-12-18  Akim Demaille  <demaille@gostai.com>
	Pass switch.chk.
	* tests-local.mk: Here.

	2007-12-18  Matthieu Nottale  <nottale@gostai.com>
	Add $(PTHREAD_LIBS) to urbi_console.
	* src/Makefile.am: Here. It has threads now.

	2007-12-17  Akim Demaille  <demaille@gostai.com>
	Fix XFAIL use.
	* tests-local.mk: here.

	2007-12-17  Akim Demaille  <akim.demaille@free.fr>
	Issue warnings for undeclared variable assignments.
	* include/kernel/userver.hh (defcheck_type): New.
	(defcheck): Use it.
	* src/uexpression.cc, src/userver.cc, src/ucommand.cc: Use it.
	* src/parser/ugrammar.y: Accept "var" in various places where
	it was not valid.
	* tests-local.mk: We don't pass switch.chk.

	2007-12-17  Akim Demaille  <akim.demaille@free.fr>
	Factor.
	* src/ucommand.cc: The handling of increment/decrement.

	2007-12-17  Akim Demaille  <demaille@gostai.com>
	Factor vars and uservars.
	* src/ucommand.cc (dump_vars): New.